--- a/assets/style.css
+++ b/assets/style.css
@@ -2,12 +2,13 @@ body {
   background: url(./images/dust_scratches.png);
 }
 
-h1 {
+/* h1 {
   background: #4aaaa5;
-}
+}*/
 
 .nbar {
-  padding: 0 30px 0 0;
+  margin-bottom: 30px;
+  /* padding: 10px 30px 0 0; */
 }
 
 .mainphoto {
@@ -16,23 +17,23 @@ h1 {
   width: 200px;
 }
 
-.col-md-8 {
+/* .col-md-8 {
   background: white;
   border: 1px solid #dddddd;
   margin: 20px auto;
-}
+} */
 
-.socialBox {
+/* .socialBox {
   background: white;
   border: 1px solid #dddddd;
   margin: 20px auto;
-}
+} */
 
-.footerMain {
+/* .footerMain {
   background-color: #666666;
   text-align: center;
   border-top: solid 8px #4aaaa5;
   font-size: 8px; 
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   color: #cccccc;
-}
+} */
