--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   background: url(./images/dust_scratches.png);
 }
@@ -29,11 +32,11 @@ body {
   margin: 20px auto;
 } */
 
-/* .footerMain {
+.footerMain {
   background-color: #666666;
   text-align: center;
   border-top: solid 8px #4aaaa5;
   font-size: 8px; 
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   color: #cccccc;
-} */
+}
