--- a/assets/style.css
+++ b/assets/style.css
@@ -20,6 +20,10 @@ body {
   width: 200px;
 }
 
+.connect {
+  height: 150px;
+}
+
 /* .col-md-8 {
   background: white;
   border: 1px solid #dddddd;
@@ -39,4 +43,8 @@ body {
   font-size: 8px; 
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   color: #cccccc;
+}
+
+.footerMain a {
+  margin: 0 auto;
 }
