--- a/assets/style.css
+++ b/assets/style.css
@@ -5,12 +5,19 @@ body {
   background: url(./images/dust_scratches.png);
 }
 
-/* h1 {
-  background: #4aaaa5;
-}*/
+h1 {
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: bold;
+  /* text-decoration: underline #9b59b6; */
+}
+
+p, h2, h3 {
+  font-family: 'Josefin Sans', sans-serif;
+}
 
 .nbar {
   margin-bottom: 30px;
+  border-bottom: 2px solid #9b59b6;
   /* padding: 10px 30px 0 0; */
 }
 
@@ -22,6 +29,64 @@ body {
 
 .connect {
   height: 150px;
+  padding: 20px;
+  text-align: center;
+}
+
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,500,800);
+.snip1217 {
+  font-family: 'Raleway', Arial, sans-serif;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+.snip1217 * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+}
+.snip1217 li {
+  display: inline-block;
+  list-style: outside none none;
+  margin: 0.5em 1.5em;
+  padding: 0;
+}
+.snip1217 a {
+  padding: 0.3em 0;
+  color: black;
+  position: relative;
+  text-decoration: none;
+  display: inline-block;
+}
+.snip1217 a:before,
+.snip1217 a:after {
+  height: 3px;
+  position: absolute;
+  content: '';
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+  background-color: #9b59b6;
+  width: 0;
+}
+.snip1217 a:before {
+  top: 0;
+  left: 0;
+}
+.snip1217 a:after {
+  bottom: 0;
+  right: 0;
+}
+.snip1217 a:hover,
+.snip1217 .current a {
+  color: black;
+}
+.snip1217 a:hover:before,
+.snip1217 .current a:before,
+.snip1217 a:hover:after,
+.snip1217 .current a:after {
+  width: 100%;
 }
 
 /* .col-md-8 {
@@ -39,10 +104,11 @@ body {
 .footerMain {
   background-color: #666666;
   text-align: center;
-  border-top: solid 8px #4aaaa5;
+  border-top: solid 2px #9b59b6;
   font-size: 8px; 
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   color: #cccccc;
+  margin-top: 20px;
 }
 
 .footerMain a {
